# python-fullStack-learning

Day-1/: L-2.py  README.md  arithmetic_operations.py  distance_converter.py  temperature_converter.py
Day-18/: main.py
Day-2/: cal.py  evenOrOdd.py  largestOfThreeNumbers.py  loginSystem.py  tempCodeRunnerFile.py
Day-2/html-basics/: blood_bucket.html  cup.html  index.html
Day-20/: .env  forms.py
Day-20/instance/: todo.db
Day-21/: abc.py
Day-21/myproject/: app.py
Day-21/myproject/templates/: __init__.py  forms.py  models.py
Day-22 - Blog_app/: app.py  forms.py  models.py  routes.py  temp.txt
Day-3/: about.html  contact.html  index3.html  login.html  signup.html
Day-4/port8081/: admin.html
Day-4/port8082/: blog.html
Day-4/port8083/: home.html
Day-4/port8084/: student.html
Day-5/: dataypes2.ipynb
Day-5/.ipynb_checkpoints/: fibonacciSeries.py
Day-6/: Untitled.ipynb  cal.py  dicto.py  functions.ipynb  main.py  tempCodeRunnerFile.py
Day-6/.ipynb_checkpoints/: functions-checkpoint.ipynb
myFirstModule/: README.md  main.py  pyproject.toml
myFirstModule/calpro_akashdev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
