[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calpro-akashdev"
version = "0.1.0"
description = "Simple calculator package"
authors = [
  { name="Akash", email="akash.atmakuri2053@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
